perf: Switched to redis caching from spring caching